--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -284,7 +284,7 @@
   "settings.stakePools.smash.descriptionIOHKContent2": "これで問題を起こす可能性のあるアクターをフィルタリングすることにより、詐欺や荒らし、虐待行為に対処することができます。IOHKのSMASHサーバーの詳細は{link}。",
   "settings.stakePools.smash.descriptionIOHKLinkLabel": "こちらをご覧ください",
   "settings.stakePools.smash.descriptionIOHKLinkUrl": "https://forum.cardano.org/t/iohk-smash/42230",
-  "settings.stakePools.smash.descriptionLinkLabel": "ステークプールメタデータアグリゲーションサーバー（SMASH）",
+  "settings.stakePools.smash.descriptionLinkLabel": "ステークプールメタデータアグリゲーションサーバー（SMASH）（英語のみ）",
   "settings.stakePools.smash.descriptionLinkUrl": "https://docs.cardano.org/en/latest/getting-started/stake-pool-operators/SMASH-metadata-management.html",
   "settings.stakePools.smash.descriptionNone": "<b>このオプションは推奨されません。</b>オフチェーンメタデータサーバーを使用しない場合、Daedalusクライアントはすべてのステークプールと個別に接触してこのデータをフェッチすることになります。このプロセスは大量の時間とリソースを消費します。受信したステークプールのリストは調整されていないため、Daedalusは合法的なプールも、重複やフェイクのプールもすべて取得します。このプロセスの追加的リスクとして、ウィルス対策ソフトウェアが何千ものネットワークリクエストを、Daedalusクライアントによる悪意のある行動と見なす可能性があります。",
   "settings.stakePools.smash.select.IOHKServer": "IOHK<em>（推奨）</em>",
