--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -826,6 +826,7 @@
   "wallet.send.form.button.addAssetButtonLabel": "+ Add another asset",
   "wallet.send.form.button.addNewReceiver": "+ Add another receiver",
   "wallet.send.form.button.removeReceiver": "Remove",
+  "wallet.send.form.calculatingFeesLabel": "Calculating fees",
   "wallet.send.form.deposit.label": "Deposit",
   "wallet.send.form.description.hint": "You can type a message here, if you want.",
   "wallet.send.form.description.label": "Description",
