--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -826,6 +826,7 @@
   "wallet.send.form.button.addAssetButtonLabel": "+別のアセットを追加する",
   "wallet.send.form.button.addNewReceiver": "+別のレシーバーを追加する",
   "wallet.send.form.button.removeReceiver": "削除",
+  "wallet.send.form.calculatingFeesLabel": "手数料を計算しています",
   "wallet.send.form.deposit.label": "預り金",
   "wallet.send.form.description.hint": "任意のメッセージを入力できます",
   "wallet.send.form.description.label": "詳細",
