--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -587,50 +587,50 @@
   "voting.info.stepTitle1": "Download the Catalyst Voting App",
   "voting.info.stepTitle2": "Open the Catalyst Voting App and click on the complete registration button.",
   "voting.info.stepTitle3": "Ensure you have 5 minutes to complete the registration process, and an additional hour to receive a final confirmation.",
-  "voting.votingAdd.chooseWallet.step.continueButtonLabel": "Continue",
-  "voting.votingAdd.chooseWallet.step.description": "For <span>fund2</span> voting you will only be able to use one wallet to register.",
-  "voting.votingAdd.chooseWallet.step.errorMinVotingFunds": "This wallet does not contain the minimum amount of {minVotingFunds} ADA that is required for voting to be enabled. Please select a wallet with <span>a minimum amount of {minVotingFunds} ADA</span> and click Continue.",
-  "voting.votingAdd.chooseWallet.step.errorMinVotingFundsRewardsOnly": "This wallet contains rewards balances only, and cannot be used for voting purposes.",
-  "voting.votingAdd.chooseWallet.step.errorRestoringWallet": "The wallet cannot be used for voting purposes while it is being synced with the blockchain.",
-  "voting.votingAdd.chooseWallet.step.selectWalletInputLabel": "Select wallet",
-  "voting.votingAdd.chooseWallet.step.selectWalletInputPlaceholder": "Select Wallet",
-  "voting.votingAdd.confirm.step.continueButtonCountDownLabel": "[{countdownRemaining} seconds left before confirmation]",
-  "voting.votingAdd.confirm.step.continueButtonLabel": "Confirm Registration Transaction",
-  "voting.votingAdd.confirm.step.description": "To ensure your registration is confirmed, you will need to wait 1 hour before proceeding.",
-  "voting.votingAdd.confirm.step.descriptionRestart": "Please restart the registration process by clicking the Restart Registration button.",
-  "voting.votingAdd.confirm.step.errorMessage": "Registration transaction was not registered correctly.",
-  "voting.votingAdd.confirm.step.importantInformation1": "If you close this window, or the wallet, you will need to start the registration process again and resubmit your registration transaction.",
-  "voting.votingAdd.confirm.step.importantInformation2": "In 99.99% of cases the 1 hour wait time should suffice, however if you want a 100% guarantee to ensure successful registration we recommend waiting for 18 hours before confirming.",
-  "voting.votingAdd.confirm.step.restartButtonLabel": "Restart Registration",
-  "voting.votingAdd.dialog.dialogTitle": "Register to vote",
-  "voting.votingAdd.dialog.subtitle": "Step {step} of {stepCount}",
-  "voting.votingAdd.enterPinCode.step.continueButtonLabel": "Create PIN code",
-  "voting.votingAdd.enterPinCode.step.description": "Please create a voting PIN code. This code will be used to access the Catalyst Voting app and decrypt your QR code.",
-  "voting.votingAdd.enterPinCode.step.enterPinCodeLabel": "Enter PIN code",
-  "voting.votingAdd.enterPinCode.step.errors.invalidPinCode": "Invalid pin code",
-  "voting.votingAdd.enterPinCode.step.errors.invalidRepeatPinCode": "Pin doesn't match",
-  "voting.votingAdd.enterPinCode.step.reminder": "<span>You need to remember your PIN Code.</span> If you lose it, you will not be able to proceed with the registration process.",
-  "voting.votingAdd.enterPinCode.step.repeatPinCodeLabel": "Repeat PIN code",
-  "voting.votingAdd.enterPinCode.step.subtitle": "Your registration transaction was confirmed.",
-  "voting.votingAdd.enterPinCode.step.title": "Congratulations!",
-  "voting.votingAdd.qrCode.step.message": "This QR code is not saved anywhere, and you will not have access to it after closing this screen.",
-  "voting.votingAdd.qrCode.step.qrCodeDescription": "Scan the QR code using the Catalyst Voting app.",
-  "voting.votingAdd.qrCode.step.qrCodeTitle": "Please complete your registration now",
-  "voting.votingAdd.qrCode.step.takeScreenShotMessage": "Take a screenshot of the QR code if you want to access it later.",
-  "voting.votingAdd.qrCode.step.warningMessage": "If you lose access to the QR code, you will need to register again to generate a new QR code.",
-  "voting.votingAdd.sign.step.calculatingFees": "Calculating fees",
-  "voting.votingAdd.sign.step.continueButtonLabel": "Submit Registration Transaction",
-  "voting.votingAdd.sign.step.description": "By submitting this registration transaction, you are creating a proof of your staking balance. This proof will be used to calculate your voting power. With the exception of fees, there will be no change to the balance of your wallet.",
-  "voting.votingAdd.sign.step.feesLabel": "Fees",
-  "voting.votingAdd.sign.step.learnMoreLink": "Learn more about this step in detail",
-  "voting.votingAdd.sign.step.learntMoreLinkUrl": "https://docs.google.com/document/d/1_syHaBNjhFcB5qg_NJoBfIZIBy_ha2n042XdrDASYgY/#heading=h.u296e49etfth",
-  "voting.votingAdd.sign.step.spendingPasswordLabel": "Spending password",
-  "voting.votingAdd.sign.step.spendingPasswordPlaceholder": "Spending password",
-  "voting.votingAdd.steps.step.1.label": "Wallet",
-  "voting.votingAdd.steps.step.2.label": "Sign",
-  "voting.votingAdd.steps.step.3.label": "Confirm",
-  "voting.votingAdd.steps.step.4.label": "PIN code",
-  "voting.votingAdd.steps.step.5.label": "QR code",
+  "voting.votingRegistration.chooseWallet.step.continueButtonLabel": "Continue",
+  "voting.votingRegistration.chooseWallet.step.description": "For <span>fund2</span> voting you will only be able to use one wallet to register.",
+  "voting.votingRegistration.chooseWallet.step.errorMinVotingFunds": "This wallet does not contain the minimum amount of {minVotingFunds} ADA that is required for voting to be enabled. Please select a wallet with <span>a minimum amount of {minVotingFunds} ADA</span> and click Continue.",
+  "voting.votingRegistration.chooseWallet.step.errorMinVotingFundsRewardsOnly": "This wallet contains rewards balances only, and cannot be used for voting purposes.",
+  "voting.votingRegistration.chooseWallet.step.errorRestoringWallet": "The wallet cannot be used for voting purposes while it is being synced with the blockchain.",
+  "voting.votingRegistration.chooseWallet.step.selectWalletInputLabel": "Select wallet",
+  "voting.votingRegistration.chooseWallet.step.selectWalletInputPlaceholder": "Select Wallet",
+  "voting.votingRegistration.confirm.step.continueButtonCountDownLabel": "[{countdownRemaining} seconds left before confirmation]",
+  "voting.votingRegistration.confirm.step.continueButtonLabel": "Confirm Registration Transaction",
+  "voting.votingRegistration.confirm.step.description": "To ensure your registration is confirmed, you will need to wait 1 hour before proceeding.",
+  "voting.votingRegistration.confirm.step.descriptionRestart": "Please restart the registration process by clicking the Restart Registration button.",
+  "voting.votingRegistration.confirm.step.errorMessage": "Registration transaction was not registered correctly.",
+  "voting.votingRegistration.confirm.step.importantInformation1": "If you close this window, or the wallet, you will need to start the registration process again and resubmit your registration transaction.",
+  "voting.votingRegistration.confirm.step.importantInformation2": "In 99.99% of cases the 1 hour wait time should suffice, however if you want a 100% guarantee to ensure successful registration we recommend waiting for 18 hours before confirming.",
+  "voting.votingRegistration.confirm.step.restartButtonLabel": "Restart Registration",
+  "voting.votingRegistration.dialog.dialogTitle": "Register to vote",
+  "voting.votingRegistration.dialog.subtitle": "Step {step} of {stepCount}",
+  "voting.votingRegistration.enterPinCode.step.continueButtonLabel": "Create PIN code",
+  "voting.votingRegistration.enterPinCode.step.description": "Please create a voting PIN code. This code will be used to access the Catalyst Voting app and decrypt your QR code.",
+  "voting.votingRegistration.enterPinCode.step.enterPinCodeLabel": "Enter PIN code",
+  "voting.votingRegistration.enterPinCode.step.errors.invalidPinCode": "Invalid pin code",
+  "voting.votingRegistration.enterPinCode.step.errors.invalidRepeatPinCode": "Pin doesn't match",
+  "voting.votingRegistration.enterPinCode.step.reminder": "<span>You need to remember your PIN Code.</span> If you lose it, you will not be able to proceed with the registration process.",
+  "voting.votingRegistration.enterPinCode.step.repeatPinCodeLabel": "Repeat PIN code",
+  "voting.votingRegistration.enterPinCode.step.subtitle": "Your registration transaction was confirmed.",
+  "voting.votingRegistration.enterPinCode.step.title": "Congratulations!",
+  "voting.votingRegistration.qrCode.step.message": "This QR code is not saved anywhere, and you will not have access to it after closing this screen.",
+  "voting.votingRegistration.qrCode.step.qrCodeDescription": "Scan the QR code using the Catalyst Voting app.",
+  "voting.votingRegistration.qrCode.step.qrCodeTitle": "Please complete your registration now",
+  "voting.votingRegistration.qrCode.step.takeScreenShotMessage": "Take a screenshot of the QR code if you want to access it later.",
+  "voting.votingRegistration.qrCode.step.warningMessage": "If you lose access to the QR code, you will need to register again to generate a new QR code.",
+  "voting.votingRegistration.sign.step.calculatingFees": "Calculating fees",
+  "voting.votingRegistration.sign.step.continueButtonLabel": "Submit Registration Transaction",
+  "voting.votingRegistration.sign.step.description": "By submitting this registration transaction, you are creating a proof of your staking balance. This proof will be used to calculate your voting power. With the exception of fees, there will be no change to the balance of your wallet.",
+  "voting.votingRegistration.sign.step.feesLabel": "Fees",
+  "voting.votingRegistration.sign.step.learnMoreLink": "Learn more about this step in detail",
+  "voting.votingRegistration.sign.step.learntMoreLinkUrl": "https://docs.google.com/document/d/1_syHaBNjhFcB5qg_NJoBfIZIBy_ha2n042XdrDASYgY/#heading=h.u296e49etfth",
+  "voting.votingRegistration.sign.step.spendingPasswordLabel": "Spending password",
+  "voting.votingRegistration.sign.step.spendingPasswordPlaceholder": "Spending password",
+  "voting.votingRegistration.steps.step.1.label": "Wallet",
+  "voting.votingRegistration.steps.step.2.label": "Sign",
+  "voting.votingRegistration.steps.step.3.label": "Confirm",
+  "voting.votingRegistration.steps.step.4.label": "PIN code",
+  "voting.votingRegistration.steps.step.5.label": "QR code",
   "wallet.add.dialog.connect.description": "Pair a hardware wallet device",
   "wallet.add.dialog.connect.label": "Pair",
   "wallet.add.dialog.create.description": "Create a new wallet",
