--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -587,50 +587,50 @@
   "voting.info.stepTitle1": "Catalyst Votingアプリをダウンロードします",
   "voting.info.stepTitle2": "Catalyst Votingアプリを開き[登録を完了する]ボタンをクリックします",
   "voting.info.stepTitle3": "登録プロセスにかかる5分、さらに最終確認を受信するまでにかかる1時間の所要時間を確保してください",
-  "voting.votingAdd.chooseWallet.step.continueButtonLabel": "続ける",
-  "voting.votingAdd.chooseWallet.step.description": "<span>fund2</span>の投票用として、登録に使用できるウォレットは1つだけです。",
-  "voting.votingAdd.chooseWallet.step.errorMinVotingFunds": "このウォレットには投票を有効にするために必要な最低額{minVotingFunds} ADAが入っていません。<span>最低額の{minVotingFunds} ADA</span>以上入っているウォレットを選択して、[続ける]をクリックしてください。",
-  "voting.votingAdd.chooseWallet.step.errorMinVotingFundsRewardsOnly": "このウォレットに含まれているのは報酬残高のみであり、投票用には使用できません。",
-  "voting.votingAdd.chooseWallet.step.errorRestoringWallet": "このウォレットはブロックチェーンと同期中のため、投票用に使用することはできません。",
-  "voting.votingAdd.chooseWallet.step.selectWalletInputLabel": "ウォレットを選択する",
-  "voting.votingAdd.chooseWallet.step.selectWalletInputPlaceholder": "ウォレットを選択する",
-  "voting.votingAdd.confirm.step.continueButtonCountDownLabel": "[{countdownRemaining}確認まであとx秒]",
-  "voting.votingAdd.confirm.step.continueButtonLabel": "登録トランザクションを確認する",
-  "voting.votingAdd.confirm.step.description": "登録が確認されるまで次の段階に進む前に1時間お待ちください。",
-  "voting.votingAdd.confirm.step.descriptionRestart": "[登録をやり直す]ボタンをクリックして、登録プロセスをやり直してください。",
-  "voting.votingAdd.confirm.step.errorMessage": "登録トランザクションは正しく登録されませんでした。",
-  "voting.votingAdd.confirm.step.importantInformation1": "この画面、またはウォレットを閉じると、登録プロセスをやり直し、登録トランザクションを再度送信する必要が生じます。",
-  "voting.votingAdd.confirm.step.importantInformation2": "99.99%の場合待機時間は1時間で十分ですが、登録が成功したことを100%確実にしたい場合は、18時間待ってから確認ボタンを押してください。",
-  "voting.votingAdd.confirm.step.restartButtonLabel": "登録をやり直す",
-  "voting.votingAdd.dialog.dialogTitle": "投票の登録をする",
-  "voting.votingAdd.dialog.subtitle": "ステップ{step}/{stepCount}",
-  "voting.votingAdd.enterPinCode.step.continueButtonLabel": "PINコードを作成する",
-  "voting.votingAdd.enterPinCode.step.description": "投票用のPINコードを作成してください。このコードはCatalyst VotingアプリへのアクセスとQRコードの解読に使用されます。",
-  "voting.votingAdd.enterPinCode.step.enterPinCodeLabel": "PINコードを入力してください",
-  "voting.votingAdd.enterPinCode.step.errors.invalidPinCode": "!!!Invalid pin code",
-  "voting.votingAdd.enterPinCode.step.errors.invalidRepeatPinCode": "PINコードが一致しません",
-  "voting.votingAdd.enterPinCode.step.reminder": "PINコードはなくさないように注意してください。PINコードをなくすと、登録プロセスを続けることができなくなります",
-  "voting.votingAdd.enterPinCode.step.repeatPinCodeLabel": "PINコードを再入力してください",
-  "voting.votingAdd.enterPinCode.step.subtitle": "登録トランザクションが確認されました",
-  "voting.votingAdd.enterPinCode.step.title": "おめでとうございます",
-  "voting.votingAdd.qrCode.step.message": "このQRコードはどこにも保存されることなく、この画面を閉じるとアクセスできなくなります。",
-  "voting.votingAdd.qrCode.step.qrCodeDescription": "Catalyst VotingアプリでQRコードをスキャンしてください",
-  "voting.votingAdd.qrCode.step.qrCodeTitle": "登録を完了してください",
-  "voting.votingAdd.qrCode.step.takeScreenShotMessage": "あとからアクセスする可能性がある場合は、QRコードのスクリーンショットを撮っておいてください",
-  "voting.votingAdd.qrCode.step.warningMessage": "QRコードへのアクセスをなくした場合、新しいQRコードを生成するためには、登録を再び行う必要があります。",
-  "voting.votingAdd.sign.step.calculatingFees": "手数料を計算しています",
-  "voting.votingAdd.sign.step.continueButtonLabel": "登録トランザクションを送信する",
-  "voting.votingAdd.sign.step.description": "この登録トランザクションを送信することによって、ステーキング残高の証明が作成されます。この証明に基づき、あなたの議決権が計算されます。手数料を除いて、ウォレットの残高が変更されることはありません。",
-  "voting.votingAdd.sign.step.feesLabel": "手数料",
-  "voting.votingAdd.sign.step.learnMoreLink": "このステップの詳細を見る",
-  "voting.votingAdd.sign.step.learntMoreLinkUrl": "https://docs.google.com/document/d/1_syHaBNjhFcB5qg_NJoBfIZIBy_ha2n042XdrDASYgY/#heading=h.u296e49etfth",
-  "voting.votingAdd.sign.step.spendingPasswordLabel": "送信時パスワード",
-  "voting.votingAdd.sign.step.spendingPasswordPlaceholder": "送信時パスワード",
-  "voting.votingAdd.steps.step.1.label": "ウォレット",
-  "voting.votingAdd.steps.step.2.label": "署名",
-  "voting.votingAdd.steps.step.3.label": "確認",
-  "voting.votingAdd.steps.step.4.label": "PINコード",
-  "voting.votingAdd.steps.step.5.label": "QRコード",
+  "voting.votingRegistration.chooseWallet.step.continueButtonLabel": "続ける",
+  "voting.votingRegistration.chooseWallet.step.description": "<span>fund2</span>の投票用として、登録に使用できるウォレットは1つだけです。",
+  "voting.votingRegistration.chooseWallet.step.errorMinVotingFunds": "このウォレットには投票を有効にするために必要な最低額{minVotingFunds} ADAが入っていません。<span>最低額の{minVotingFunds} ADA</span>以上入っているウォレットを選択して、[続ける]をクリックしてください。",
+  "voting.votingRegistration.chooseWallet.step.errorMinVotingFundsRewardsOnly": "このウォレットに含まれているのは報酬残高のみであり、投票用には使用できません。",
+  "voting.votingRegistration.chooseWallet.step.errorRestoringWallet": "このウォレットはブロックチェーンと同期中のため、投票用に使用することはできません。",
+  "voting.votingRegistration.chooseWallet.step.selectWalletInputLabel": "ウォレットを選択する",
+  "voting.votingRegistration.chooseWallet.step.selectWalletInputPlaceholder": "ウォレットを選択する",
+  "voting.votingRegistration.confirm.step.continueButtonCountDownLabel": "[{countdownRemaining}確認まであとx秒]",
+  "voting.votingRegistration.confirm.step.continueButtonLabel": "登録トランザクションを確認する",
+  "voting.votingRegistration.confirm.step.description": "登録が確認されるまで次の段階に進む前に1時間お待ちください。",
+  "voting.votingRegistration.confirm.step.descriptionRestart": "[登録をやり直す]ボタンをクリックして、登録プロセスをやり直してください。",
+  "voting.votingRegistration.confirm.step.errorMessage": "登録トランザクションは正しく登録されませんでした。",
+  "voting.votingRegistration.confirm.step.importantInformation1": "この画面、またはウォレットを閉じると、登録プロセスをやり直し、登録トランザクションを再度送信する必要が生じます。",
+  "voting.votingRegistration.confirm.step.importantInformation2": "99.99%の場合待機時間は1時間で十分ですが、登録が成功したことを100%確実にしたい場合は、18時間待ってから確認ボタンを押してください。",
+  "voting.votingRegistration.confirm.step.restartButtonLabel": "登録をやり直す",
+  "voting.votingRegistration.dialog.dialogTitle": "投票の登録をする",
+  "voting.votingRegistration.dialog.subtitle": "ステップ{step}/{stepCount}",
+  "voting.votingRegistration.enterPinCode.step.continueButtonLabel": "PINコードを作成する",
+  "voting.votingRegistration.enterPinCode.step.description": "投票用のPINコードを作成してください。このコードはCatalyst VotingアプリへのアクセスとQRコードの解読に使用されます。",
+  "voting.votingRegistration.enterPinCode.step.enterPinCodeLabel": "PINコードを入力してください",
+  "voting.votingRegistration.enterPinCode.step.errors.invalidPinCode": "!!!Invalid pin code",
+  "voting.votingRegistration.enterPinCode.step.errors.invalidRepeatPinCode": "PINコードが一致しません",
+  "voting.votingRegistration.enterPinCode.step.reminder": "PINコードはなくさないように注意してください。PINコードをなくすと、登録プロセスを続けることができなくなります",
+  "voting.votingRegistration.enterPinCode.step.repeatPinCodeLabel": "PINコードを再入力してください",
+  "voting.votingRegistration.enterPinCode.step.subtitle": "登録トランザクションが確認されました",
+  "voting.votingRegistration.enterPinCode.step.title": "おめでとうございます",
+  "voting.votingRegistration.qrCode.step.message": "このQRコードはどこにも保存されることなく、この画面を閉じるとアクセスできなくなります。",
+  "voting.votingRegistration.qrCode.step.qrCodeDescription": "Catalyst VotingアプリでQRコードをスキャンしてください",
+  "voting.votingRegistration.qrCode.step.qrCodeTitle": "登録を完了してください",
+  "voting.votingRegistration.qrCode.step.takeScreenShotMessage": "あとからアクセスする可能性がある場合は、QRコードのスクリーンショットを撮っておいてください",
+  "voting.votingRegistration.qrCode.step.warningMessage": "QRコードへのアクセスをなくした場合、新しいQRコードを生成するためには、登録を再び行う必要があります。",
+  "voting.votingRegistration.sign.step.calculatingFees": "手数料を計算しています",
+  "voting.votingRegistration.sign.step.continueButtonLabel": "登録トランザクションを送信する",
+  "voting.votingRegistration.sign.step.description": "この登録トランザクションを送信することによって、ステーキング残高の証明が作成されます。この証明に基づき、あなたの議決権が計算されます。手数料を除いて、ウォレットの残高が変更されることはありません。",
+  "voting.votingRegistration.sign.step.feesLabel": "手数料",
+  "voting.votingRegistration.sign.step.learnMoreLink": "このステップの詳細を見る",
+  "voting.votingRegistration.sign.step.learntMoreLinkUrl": "https://docs.google.com/document/d/1_syHaBNjhFcB5qg_NJoBfIZIBy_ha2n042XdrDASYgY/#heading=h.u296e49etfth",
+  "voting.votingRegistration.sign.step.spendingPasswordLabel": "送信時パスワード",
+  "voting.votingRegistration.sign.step.spendingPasswordPlaceholder": "送信時パスワード",
+  "voting.votingRegistration.steps.step.1.label": "ウォレット",
+  "voting.votingRegistration.steps.step.2.label": "署名",
+  "voting.votingRegistration.steps.step.3.label": "確認",
+  "voting.votingRegistration.steps.step.4.label": "PINコード",
+  "voting.votingRegistration.steps.step.5.label": "QRコード",
   "wallet.add.dialog.connect.description": "ハードウェアウォレットデバイスをペアリングする",
   "wallet.add.dialog.connect.label": "ペアリング",
   "wallet.add.dialog.create.description": "ウォレットを新規作成する",
