DDW-500 Implement design for native tokens - Wallet token send form - adding dropdown field for native tokens

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -842,6 +842,7 @@
   "wallet.send.form.reset": "Reset",
   "wallet.send.form.send": "Send",
   "wallet.send.form.syncingTransactionsMessage": "The balance and transaction history of this wallet is being synced with the blockchain.",
+  "wallet.send.form.syncingWallet": "syncing",
   "wallet.send.form.title.hint": "E.g: Money for Frank",
   "wallet.send.form.title.label": "Title",
   "wallet.settings.assurance": "!!!Transaction assurance security level",
