--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -589,7 +589,7 @@
   "voting.info.stepTitle3": "Ensure you have 5 minutes to complete the registration process, and an additional hour to receive a final confirmation.",
   "voting.votingRegistration.chooseWallet.step.continueButtonLabel": "Continue",
   "voting.votingRegistration.chooseWallet.step.description": "For <span>fund2</span> voting you will only be able to use one wallet to register.",
-  "voting.votingRegistration.chooseWallet.step.errorMinVotingFunds": "This wallet does not contain the minimum amount of {minVotingFunds} ADA that is required for voting to be enabled. Please select a wallet with <span>a minimum amount of {minVotingFunds} ADA</span> and click Continue.",
+  "voting.votingRegistration.chooseWallet.step.errorMinVotingFunds": "This wallet does not contain the minimum amount of {minVotingRegistrationFunds} ADA that is required for voting to be enabled. Please select a wallet with <span>a minimum amount of {minVotingRegistrationFunds} ADA</span> and click Continue.",
   "voting.votingRegistration.chooseWallet.step.errorMinVotingFundsRewardsOnly": "This wallet contains rewards balances only, and cannot be used for voting purposes.",
   "voting.votingRegistration.chooseWallet.step.errorRestoringWallet": "The wallet cannot be used for voting purposes while it is being synced with the blockchain.",
   "voting.votingRegistration.chooseWallet.step.selectWalletInputLabel": "Select wallet",
