--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -589,7 +589,7 @@
   "voting.info.stepTitle3": "登録プロセスにかかる5分、さらに最終確認を受信するまでにかかる1時間の所要時間を確保してください",
   "voting.votingRegistration.chooseWallet.step.continueButtonLabel": "続ける",
   "voting.votingRegistration.chooseWallet.step.description": "<span>fund2</span>の投票用として、登録に使用できるウォレットは1つだけです。",
-  "voting.votingRegistration.chooseWallet.step.errorMinVotingFunds": "このウォレットには投票を有効にするために必要な最低額{minVotingFunds} ADAが入っていません。<span>最低額の{minVotingFunds} ADA</span>以上入っているウォレットを選択して、[続ける]をクリックしてください。",
+  "voting.votingRegistration.chooseWallet.step.errorMinVotingFunds": "このウォレットには投票を有効にするために必要な最低額{minVotingRegistrationFunds} ADAが入っていません。<span>最低額の{minVotingRegistrationFunds} ADA</span>以上入っているウォレットを選択して、[続ける]をクリックしてください。",
   "voting.votingRegistration.chooseWallet.step.errorMinVotingFundsRewardsOnly": "このウォレットに含まれているのは報酬残高のみであり、投票用には使用できません。",
   "voting.votingRegistration.chooseWallet.step.errorRestoringWallet": "このウォレットはブロックチェーンと同期中のため、投票用に使用することはできません。",
   "voting.votingRegistration.chooseWallet.step.selectWalletInputLabel": "ウォレットを選択する",
