--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -15,6 +15,7 @@
   "api.errors.WalletFileImportError": "Wallet could not be imported, please make sure you are providing a correct file.",
   "api.errors.inputsDepleted": "Cannot send from a wallet that contains only rewards balances.",
   "api.errors.invalidAddress": "Please enter a valid address.",
+  "api.errors.invalidSmashServer": "This URL is not a valid SMASH server",
   "api.errors.nothingToMigrate": "Funds cannot be transferred from this wallet because it contains some unspent transaction outputs (UTXOs), with amounts of ada that are too small to be migrated.",
   "api.errors.utxoTooSmall": "Invalid transaction.",
   "appUpdate.overlay.button.installUpdate.label": "Install the update and restart Daedalus",
@@ -275,8 +276,24 @@
   "settings.display.themeNames.yellow": "Yellow",
   "settings.menu.display.link.label": "Themes",
   "settings.menu.general.link.label": "General",
+  "settings.menu.stakePools.link.label": "Stake pools",
   "settings.menu.support.link.label": "Support",
   "settings.menu.termsOfUse.link.label": "Terms of service",
+  "settings.stakePools.smash.description": "The {link} is an off-chain metadata server that enables the fast loading of stake pool details. Stake pools are also curated and each server has a different curation policy.",
+  "settings.stakePools.smash.descriptionIOHKContent1": "The IOHK server ensures that registered stake pools are valid, helps to avoid duplicated ticker names or trademarks, and checks that the pools do not feature potentially offensive or harmful information.",
+  "settings.stakePools.smash.descriptionIOHKContent2": "This allows us to deal with any scams, trolls, or abusive behavior by filtering out potentially problematic actors. {link} about the IOHK SMASH server.",
+  "settings.stakePools.smash.descriptionIOHKLinkLabel": "Read more",
+  "settings.stakePools.smash.descriptionIOHKLinkUrl": "https://iohk.io/en/blog/posts/2020/11/17/in-pools-we-trust/",
+  "settings.stakePools.smash.descriptionLinkLabel": "Stakepool Metadata Aggregation Server (SMASH)",
+  "settings.stakePools.smash.descriptionLinkUrl": "https://docs.cardano.org/en/latest/getting-started/stake-pool-operators/SMASH-metadata-management.html",
+  "settings.stakePools.smash.descriptionNone": "<b>This option is not recommended!</b> Without the off-chain metadata server your Daedalus client will fetch this data by contacting every stake pool individually, which is a very slow and resource-consuming process. The list of stake pools received is not curated, so Daedalus will receive legitimate pools, duplicates, and fake pools. An added risk to this process is that your antivirus or antimalware software could recognize the thousands of network requests as malicious behavior by the Daedalus client.",
+  "settings.stakePools.smash.select.IOHKServer": "IOHK <em>(recommended)</em>",
+  "settings.stakePools.smash.select.customServer": "Custom server",
+  "settings.stakePools.smash.select.direct": "None - fetch the data directly",
+  "settings.stakePools.smash.select.label": "Off-chain metadata server (SMASH)",
+  "settings.stakePools.smashUrl.input.invalidUrl": "Invalid URL",
+  "settings.stakePools.smashUrl.input.label": "SMASH server URL",
+  "settings.stakePools.smashUrl.input.placeholder": "Enter custom server URL",
   "settings.support.faq.content": "If you are experiencing a problem, please look for guidance using the list of {faqLink} on the support pages. If you can’t find a solution, please submit a support ticket.",
   "settings.support.faq.faqLink": "Known Issues",
   "settings.support.faq.faqLinkURL": "https://daedaluswallet.io/known-issues/",
@@ -457,9 +474,12 @@
   "staking.rewards.title": "Earned delegation rewards",
   "staking.stakePools.delegatingListTitle": "Staking pools you are delegating to",
   "staking.stakePools.learnMore": "Learn more",
-  "staking.stakePools.listTitle": "Stake pools ({pools})",
-  "staking.stakePools.listTitleWithSearch": "Stake pools. Search results: ({pools})",
+  "staking.stakePools.listTitle": "Stake pools",
+  "staking.stakePools.listTitleLoading": "Loading stake pools",
+  "staking.stakePools.listTitleSearch": ". Search results:",
+  "staking.stakePools.listTitleStakePools": " ({pools})",
   "staking.stakePools.loadingStakePoolsMessage": "Loading stake pools",
+  "staking.stakePools.moderatedBy": "Moderated by {smashServer}",
   "staking.stakePools.noDataDashTooltip": "Data not available yet",
   "staking.stakePools.rankingAllWallets": "all your wallets",
   "staking.stakePools.rankingAllWalletsEnd": ".",
@@ -509,6 +529,7 @@
   "staking.stakePools.tooltip.retirement": "Retirement in {retirementFromNow}",
   "staking.stakePools.tooltip.saturation": "Saturation:",
   "staking.stakePools.tooltip.saturationTooltip": "Saturation measures the stake in the pool and indicates the point at which rewards stop increasing with increases in stake. This capping mechanism encourages decentralization by discouraging users from delegating to oversaturated stake pools.",
+  "staking.stakePools.unmoderated": "Unmoderated",
   "static.about.buildInfo": "{platform} build <strong>{build}</strong>, {apiName} Node <strong>{nodeVersion}</strong>, {apiName} Wallet <strong>{apiVersion}</strong>",
   "static.about.buildInfoForITN": "{platform} build <strong>{build}</strong>, with {apiName} <strong>{apiVersion}</strong>",
   "static.about.content.cardano.headline": "Cardano Team:",
