--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -15,6 +15,7 @@
   "api.errors.WalletFileImportError": "ウォレットをインポートできませんでした。有効なファイルを指定していることを確認してください。",
   "api.errors.inputsDepleted": "報酬残高のみを含むウォレットからの送信はできません。",
   "api.errors.invalidAddress": "有効なアドレスを入力してください。",
+  "api.errors.invalidSmashServer": "このURLは有効なSMASHサーバーではありません",
   "api.errors.nothingToMigrate": "このウォレットに保有されている未使用トランザクションアウトプット（UTXO）の一部に、移行するために十分なADAが入っていないため、このウォレットから資金を移すことはできません。",
   "api.errors.utxoTooSmall": "無効なトランザクションです。",
   "appUpdate.overlay.button.installUpdate.label": "更新をインストールしてDaedalusを再起動する",
@@ -275,8 +276,24 @@
   "settings.display.themeNames.yellow": "イエロー",
   "settings.menu.display.link.label": "テーマ",
   "settings.menu.general.link.label": "一般",
+  "settings.menu.stakePools.link.label": "ステークプール",
   "settings.menu.support.link.label": "ユーザーサポート",
   "settings.menu.termsOfUse.link.label": "サービス利用規約",
+  "settings.stakePools.smash.description": "{link}は、ステークプールの詳細を素早くロードすることを可能にする、オフチェーンのメタデータサーバーです。ステークプールは、サーバーごとに異なるポリシーに基づいて調整されます。",
+  "settings.stakePools.smash.descriptionIOHKContent1": "IOHKサーバーは、登録されたステークプールが有効であることを確認し、ティッカー名や商標の重複を回避し、プールが攻撃的または害となる可能性のある情報を有していないかチェックします。",
+  "settings.stakePools.smash.descriptionIOHKContent2": "これで問題を起こす可能性のあるアクターをフィルタリングすることにより、詐欺や荒らし、虐待行為に対処することができます。IOHKのSMASHサーバーの詳細は{link}。",
+  "settings.stakePools.smash.descriptionIOHKLinkLabel": "こちらをご覧ください",
+  "settings.stakePools.smash.descriptionIOHKLinkUrl": "https://forum.cardano.org/t/iohk-smash/42230",
+  "settings.stakePools.smash.descriptionLinkLabel": "ステークプールメタデータアグリゲーションサーバー（SMASH）（英語のみ）",
+  "settings.stakePools.smash.descriptionLinkUrl": "https://docs.cardano.org/en/latest/getting-started/stake-pool-operators/SMASH-metadata-management.html",
+  "settings.stakePools.smash.descriptionNone": "<b>このオプションは推奨されません。</b>オフチェーンメタデータサーバーを使用しない場合、Daedalusクライアントはすべてのステークプールと個別に接触してこのデータをフェッチすることになります。このプロセスは大量の時間とリソースを消費します。受信したステークプールのリストは調整されていないため、Daedalusは合法的なプールも、重複やフェイクのプールもすべて取得します。このプロセスの追加的リスクとして、ウィルス対策ソフトウェアが何千ものネットワークリクエストを、Daedalusクライアントによる悪意のある行動と見なす可能性があります。",
+  "settings.stakePools.smash.select.IOHKServer": "IOHK<em>（推奨）</em>",
+  "settings.stakePools.smash.select.customServer": "カスタムサーバー",
+  "settings.stakePools.smash.select.direct": "使用しない（直接データをフェッチする）",
+  "settings.stakePools.smash.select.label": "オフチェーンメタデータサーバー（SMASH）",
+  "settings.stakePools.smashUrl.input.invalidUrl": "無効なURL",
+  "settings.stakePools.smashUrl.input.label": "SMASHサーバーURL",
+  "settings.stakePools.smashUrl.input.placeholder": "カスタムサーバーを入力してください",
   "settings.support.faq.content": "問題が発生している場合は、サポートページにある{faqLink}リストを参照して解決方法を探してください。解決方法が見つからない場合はサポートリクエストを送信してください。",
   "settings.support.faq.faqLink": "既知の問題",
   "settings.support.faq.faqLinkURL": "https://daedaluswallet.io/ja/known-issues/",
@@ -457,9 +474,12 @@
   "staking.rewards.title": "獲得した委任報酬",
   "staking.stakePools.delegatingListTitle": "現在委任しているステークプール",
   "staking.stakePools.learnMore": "もっと知る",
-  "staking.stakePools.listTitle": "ステークプール ({pools})",
-  "staking.stakePools.listTitleWithSearch": "ステークプール検索結果：({pools})",
+  "staking.stakePools.listTitle": "ステークプール",
+  "staking.stakePools.listTitleLoading": "ステークプールをロード中",
+  "staking.stakePools.listTitleSearch": "。検索結果：",
+  "staking.stakePools.listTitleStakePools": "（{pools}）",
   "staking.stakePools.loadingStakePoolsMessage": "ステークプールをロードしています",
+  "staking.stakePools.moderatedBy": "{smashServer}が調整済み",
   "staking.stakePools.noDataDashTooltip": "まだ利用できるデータがありません",
   "staking.stakePools.rankingAllWallets": "すべてのウォレット",
   "staking.stakePools.rankingAllWalletsEnd": "の合計額を基にランク付けされています。",
@@ -509,6 +529,7 @@
   "staking.stakePools.tooltip.retirement": "あと{retirementFromNow}で終了",
   "staking.stakePools.tooltip.saturation": "飽和：",
   "staking.stakePools.tooltip.saturationTooltip": "プールのステーク数を計測し、プール数が増加しても、報酬増加に反映されなくなる時点を示すもので、この上限を定めるメカニズムにより、ユーザーが飽和状態のステークプールに委任することを抑制することで、分散化を促進する",
+  "staking.stakePools.unmoderated": "未調整",
   "static.about.buildInfo": "{platform} ビルド <strong>{build}</strong>, {apiName} Node <strong>{nodeVersion}</strong>, {apiName} Wallet <strong>{apiVersion}</strong>",
   "static.about.buildInfoForITN": "{platform} ビルド <strong>{build}</strong>, {apiName} <strong>{apiVersion}</strong>",
   "static.about.content.cardano.headline": "Cardanoチーム：",
