--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -951,7 +951,7 @@
   "wallet.summary.page.syncingTransactionsMessage": "Your transaction history for this wallet is being synced with the blockchain.",
   "wallet.summary.page.todayLabel": "Today",
   "wallet.summary.page.tokenSendButton": "Send",
-  "wallet.summary.page.tokensTitle": "Tokens",
+  "wallet.summary.page.tokensTitle": "Assets",
   "wallet.summary.page.transactionsLabel": "Number of transactions",
   "wallet.summary.page.yesterdayLabel": "Yesterday",
   "wallet.transaction.address.from": "From address",
