--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -608,8 +608,11 @@
   "voting.info.stepTitle1": "Download the Catalyst Voting App",
   "voting.info.stepTitle2": "Open the Catalyst Voting App and click on the complete registration button.",
   "voting.info.stepTitle3": "Ensure you have 5 minutes to complete the registration process, and an additional hour to receive a final confirmation.",
+  "voting.unavailable.description": "Before registering for voting, Daedalus first needs to synchronize with the blockchain. The synchronization process is now underway and it is currently <b>{syncPercentage}%</b> complete. As soon as this process is fully complete, you’ll be able to register with Fund3. Please wait for this process to complete before returning here.",
   "voting.votingRegistration.chooseWallet.step.continueButtonLabel": "Continue",
-  "voting.votingRegistration.chooseWallet.step.description": "For <span>fund2</span> voting you will only be able to use one wallet to register.",
+  "voting.votingRegistration.chooseWallet.step.description": "For <span>Fund3</span> voting you will only be able to use one wallet to register.",
+  "voting.votingRegistration.chooseWallet.step.errorHardwareWallet": "This wallet cannot be registered for voting because it is a hardware wallet. <span>Hardware wallets will be supported in the future.</span>",
+  "voting.votingRegistration.chooseWallet.step.errorLegacyWallet": "This wallet cannot be registered for voting because it is a legacy Byron wallet.",
   "voting.votingRegistration.chooseWallet.step.errorMinVotingFunds": "This wallet does not contain the minimum amount of {minVotingRegistrationFunds} ADA that is required for voting to be enabled. Please select a wallet with <span>a minimum amount of {minVotingRegistrationFunds} ADA</span> and click Continue.",
   "voting.votingRegistration.chooseWallet.step.errorMinVotingFundsRewardsOnly": "This wallet contains rewards balances only, and cannot be used for voting purposes.",
   "voting.votingRegistration.chooseWallet.step.errorRestoringWallet": "The wallet cannot be used for voting purposes while it is being synced with the blockchain.",
