--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -608,8 +608,11 @@
   "voting.info.stepTitle1": "Catalyst Votingアプリをダウンロードします",
   "voting.info.stepTitle2": "Catalyst Votingアプリを開き[登録を完了する]ボタンをクリックします",
   "voting.info.stepTitle3": "登録プロセスにかかる5分、さらに最終確認を受信するまでにかかる1時間の所要時間を確保してください",
+  "voting.unavailable.description": "!!!Before registering for voting, Daedalus first needs to synchronize with the blockchain. The synchronization process is now underway and it is currently <b>{syncPercentage}%</b> complete. As soon as this process is fully complete, you’ll be able to register with Fund3. Please wait for this process to complete before returning here.",
   "voting.votingRegistration.chooseWallet.step.continueButtonLabel": "続ける",
-  "voting.votingRegistration.chooseWallet.step.description": "<span>fund2</span>の投票用として、登録に使用できるウォレットは1つだけです。",
+  "voting.votingRegistration.chooseWallet.step.description": "<span>Fund3</span>の投票用として、登録に使用できるウォレットは1つだけです。",
+  "voting.votingRegistration.chooseWallet.step.errorHardwareWallet": "!!!This wallet cannot be registered for voting because it is a hardware wallet. <span>Hardware wallets will be supported in the future.</span>",
+  "voting.votingRegistration.chooseWallet.step.errorLegacyWallet": "!!!This wallet cannot be registered for voting because it is a legacy Byron wallet.",
   "voting.votingRegistration.chooseWallet.step.errorMinVotingFunds": "このウォレットには投票を有効にするために必要な最低額{minVotingRegistrationFunds} ADAが入っていません。<span>最低額の{minVotingRegistrationFunds} ADA</span>以上入っているウォレットを選択して、[続ける]をクリックしてください。",
   "voting.votingRegistration.chooseWallet.step.errorMinVotingFundsRewardsOnly": "このウォレットに含まれているのは報酬残高のみであり、投票用には使用できません。",
   "voting.votingRegistration.chooseWallet.step.errorRestoringWallet": "このウォレットはブロックチェーンと同期中のため、投票用に使用することはできません。",
